--- a/dependecies.gradle
+++ b/dependecies.gradle
@@ -1,6 +1,7 @@
 dependencies {
     def lifecycle_version = "2.2.0"
     def lottieVersion = "3.7.0"
+    def paging_version = "3.0.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -9,6 +10,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.fragment:fragment-ktx:1.3.4"
+
+    //---------------------- Paging Libraries------------------------------//
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
     //---------------------- ViewModel Libraries------------------------------//
     implementation "com.airbnb.android:lottie:$lottieVersion"
