Create an explorer activity to find query suggestions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Challenge">
-        <activity android:name=".views.search.ItemListActivity">
+        <activity android:name=".views.suggestion.ExplorerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
