--- a/dependecies.gradle
+++ b/dependecies.gradle
@@ -34,7 +34,7 @@ dependencies {
 
     //---------------------- Coroutines Libraries------------------------------//
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
 
     //---------------------- Glide Libraries------------------------------//
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -43,6 +43,7 @@ dependencies {
     //---------------------- Testing Libraries------------------------------//
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.9.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
