--- a/jacocco.gradle
+++ b/jacocco.gradle
@@ -2,6 +2,7 @@ apply plugin: 'jacoco'
 
 tasks.withType(Test) {
     jacoco.includeNoLocationClasses = true
+    jacoco.excludes = ['jdk.internal.*']
 }
 
 def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug", excludes: ext.excludes.list)
@@ -16,7 +17,6 @@ task jacocoTestReport(type: JacocoReport, dependsOn: 'testDebugUnitTest') {
     reports {
         xml.enabled = true
         html.enabled = true
-        csv.enabled = true
     }
     getSourceDirectories().setFrom(files([mainSrc]))
     getClassDirectories().setFrom(files([debugTree, kotlinDebugTree]))
