adding excludes files

--- a/coverage-excludes.gradle
+++ b/coverage-excludes.gradle
@@ -3,7 +3,9 @@ def fileFilter = [
         '**/R$*.class',
         '**/BuildConfig.*',
         '**/Manifest*.*',
-        'com/meli/challenge/model*.*',
+        '**/com/meli/challenge/views/search/paging/*.*',
+        '**/com/meli/challenge/base/BaseActivity*.*',
+        '**/com/meli/challenge/base/GenericErrorFragment*.*',
         '**/com/meli/challenge/model*.*',
         '**/*model/*.*',
         "**/*ViewHolder*.*",
