--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -1,9 +1,8 @@
 name: Build
 on:
   push:
-    branches:
-      - develop
-      - master
+    branches: [develop, master]
+
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
