--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jacoco:org.jacoco.core:$jacocoVersion"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
