--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 on:
   push:
-    branches: [develop, master]
+    branches: *
 
   pull_request:
     types: [opened, synchronize, reopened]
