cooment exclusions line

--- a/sonar.gradle
+++ b/sonar.gradle
@@ -14,7 +14,7 @@ sonarqube {
         property "sonar.scm.provider", "git"
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.junit.reportsPath", "build/test-results/testDebugUnitTest"
-        property "sonar.exclusions", project().ext.excludes.string
+//        property "sonar.exclusions", project().ext.excludes.string
         property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
         property "sonar.kotlin.detekt.reportPaths", "build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
     }
