--- a/sonar.gradle
+++ b/sonar.gradle
@@ -1,3 +1,5 @@
+apply plugin: "org.sonarqube"
+
 sonarqube {
     properties {
 
@@ -5,14 +7,15 @@ sonarqube {
         property "sonar.organization", "rusintoustau"
         property "sonar.host.url", "https://sonarcloud.io"
 
-        property "sonar.projectVersion", project.ext.versionNumber
+        property "sonar.projectVersion", getProject().ext.versionNumber
         property "sonar.sourceEncoding", "UTF-8"
         property "sonar.tests", "src/test/java"
         property "sonar.scm.disabled", "false"
         property "sonar.scm.provider", "git"
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.junit.reportsPath", "build/test-results/testDebugUnitTest"
-        property "sonar.exclusions", project.ext.excludes.string
+//        property "sonar.exclusions", project().ext.excludes.string
         property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
+        property "sonar.kotlin.detekt.reportPaths", "build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
     }
 }
